refactor: rename from Multi-Agent Living Space to Multi-Agent Living System
- Full name updated across all files: README, README_CN, pyproject.toml, CLI, conductor prompt, __init__.py
- Architecture overview diagram regenerated with updated subtitle
- 'Living System' better conveys the self-organizing, adaptive nature of the framework
- MALS abbreviation remains unchanged
- All 38 tests pass

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "mals"
 version = "0.1.0"
-description = "Multi-Agent Living Space (MALS) — A blackboard-architecture-based multi-agent collaboration framework"
+description = "MALS (Multi-Agent Living System) — A blackboard-architecture-based multi-agent collaboration framework"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.11"
